<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Friends Event</string>
    <string name="authentification">Authentification</string>
    <string name="field_login_hint">login</string>
    <string name="field_password_hint">password</string>
    <string name="btn_login_text">CONNECT</string>
    <string name="inscription_txt"><u>Inscription</u></string>
    <string name="registration_txt">Registration</string>
    <string name="field_login_hint_re">login</string>
    <string name="field_password_hint_re">password</string>
    <string name="field_repassword_hint_re">repeat password</string>
    <string name="field_pseudo_hint_re">pseudo</string>
    <string name="field_email_hint_re">email</string>
    <string name="register_btn_text">Register</string>
    <string name="settings_text">Settings</string>
    <string name="btn_settings">Save</string>
    <string name="create_event">Create Event</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
     <string name="btn_send">Send</string>
    <string name="field_titre_event">title event</string>
    <string name="field_adresse_event">adresse event</string>
    <string name="text_date">17-11-2013</string>
    <string name="text_time">00:00</string>
    
    
    
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>

    <string-array name="planets_array">
        <item>Adobe After Effects</item>
        <item>Adobe Bridge</item>
        <item>Adobe Dreamweaver</item>
        <item>Adobe Edge</item>
    </string-array>

    <string name="Fragment1">This is Fragment 1</string>
    <string name="Fragment2">This is Fragment 2</string>
    <string name="Fragment3">This is Fragment 3</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="settings_title">SETTINGS</string>
    <string name="settings_main">MAIN</string>
    <string name="settings_main_preferences">My parameters</string>
    <string name="settings_main_preferences_sub">Units and goal</string>
    <string name="settings_main_drinkware">Capacity edit</string>
    <string name="settings_main_drinkware_sub">Customize your cups</string>
    <string name="ad_message">50% of your donation will go to charity: water</string>
    <string name="ad_notice">Click the ad to make it disappear for next 24h</string>
    <string name="goal_message">"You've reached your goal!"</string>
    <string name="goal_title">Congratulations!</string>
    <string name="button_ok">OK</string>

</resources>