<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fill_layout"
    android:orientation="vertical" >

    <LinearLayout style="@style/wrap_layout" >

        <ImageView
            android:id="@id/authentification_title_icon"
            style="@style/wrap_layout"
            android:layout_width="match_parent"
            android:src="@drawable/header" />
    </LinearLayout>

    <ScrollView style="@style/match_wrap" >

        <LinearLayout
            style="@style/fill_layout"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@id/entry_wrapper"
                style="@style/login_wrapper"
                android:layout_gravity="center"
                android:layout_marginTop="50.0dip" >

                <LinearLayout style="@style/authentication_header" >

                    <ImageView
                        android:id="@id/authentification_title_icon"
                        style="@style/authentification_title_icon"
                        android:src="@drawable/ic_lock" />

                    <TextView
                        android:id="@id/authentencation"
                        style="@style/authentification_title"
                        android:text="@string/authentification" />
                </LinearLayout>

                <LinearLayout style="@style/authentification_background" >

                    <EditText
                        android:id="@id/login_value"
                        style="@style/wrap_layout"
                        android:layout_width="180.0dip"
                        android:layout_height="40dip"
                        android:layout_gravity="center"
                        android:background="@drawable/edittext"
                        android:drawableLeft="@drawable/us"
                        android:hint="@string/field_login_hint" />

                    <EditText
                        android:id="@id/password_value"
                        style="@style/wrap_layout"
                        android:layout_width="180.0dip"
                        android:layout_height="40dip"
                        android:layout_gravity="center"
                        android:layout_marginTop="20.0dip"
                        android:background="@drawable/edittext"
                        android:drawableLeft="@drawable/ps"
                        android:hint="@string/field_password_hint"
                        android:inputType="textPassword" />

                    <LinearLayout
                        style="@style/wide_layout"
                        android:layout_marginTop="30.0dip" >

                        <Button
                            android:id="@id/button_login"
                            style="@style/dialog_button"
                            android:layout_marginRight="2.0dip"
                            android:layout_weight="50.0"
                            android:text="@string/btn_login_text" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        <LinearLayout style="@style/wide_layout">

            <TextView
                android:id="@id/to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dip"
                android:layout_marginTop="5.0dip"
                android:text="@string/inscription_txt"
                android:textColor="#ff0099cc"
                android:textSize="18sp" />

        </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout style="@style/fill_layout" >

        <ImageView
            android:id="@id/authentification_title_icon"
            style="@style/wrap_layout"
            android:layout_gravity="bottom"
            android:src="@drawable/footer" />
    </LinearLayout>

</LinearLayout>